--- a/user/view/default/host/left.html
+++ b/user/view/default/host/left.html
@@ -9,7 +9,7 @@
 					<tr>
 						<td class="wid_2"></td>
 						<td class="host_l right_h" background="{{$STATIC}}images/lemu_over.jpg">
-						<a href="?c=public&a=showProductFrom&product_id={{$products[$i].id}}">{{$products[$i].name}}<br>
+						<a href="?c=host&a=showProductFrom&product_id={{$products[$i].id}}">{{$products[$i].name}}<br>
 						</td>
 						<td class="wid_l"></td>
 					</tr>
