--- a/user/view/default/vhostproduct/sell.html
+++ b/user/view/default/vhostproduct/sell.html
@@ -97,7 +97,7 @@ function check_register()
 	  
        <tr>
        <td>价格:</td>
-       	<td>{{$product.price/100}}/年</td>
+       	<td>{{$product.price/100}}元/年</td>
         </tr>
         
 	    <tr>
