--- a/user/view/default/host/showProductFrom.html
+++ b/user/view/default/host/showProductFrom.html
@@ -1,5 +1,5 @@
 <div class="right" align="center">
-<div>
+<div class="wid_menu_vh">
   <table width="750" border="0" cellpadding="0" cellspacing="0" align="center">
   	  <tr>
 		<td colspan="2" background="{{$STATIC}}images/nav_bg.jpg" class="right_hg right fontcolor">
@@ -7,7 +7,7 @@
 		</td>
 	 </tr>
 </table>
-<div>
+</div>
 <div class="wid_ri r_mar" align="center">
 <table id="table_shell" cellpadding="0" cellspacing="1">
 	 <tr><td colspan="2" class="red"><b>{{$product_info.name}}产品详请</b></td></tr>
