--- a/user/view/default/public/index.html
+++ b/user/view/default/public/index.html
@@ -50,7 +50,7 @@
 							<table id="table_r" cellpadding="0" cellspacing="4">
 								<tr>
 									<td  class="right color_red right_hg"><b>双线普及型主机</b></td><td>&nbsp;</td>
-									<td class="right_hg" align="right"><span class="right_r"><a href="?c=session&a=loginForm"><img src="{{$STATIC}}images/r_fdh_01.jpg" border="0"/></a></span></td>
+									<td class="right_hg" align="right"><span class="right_r"><a href="?c=host&a=index"><img src="{{$STATIC}}images/r_fdh_01.jpg" border="0"/></a></span></td>
 								</tr>
 								<tr>
 								  <td class="right_hg2" align="center"><b>双线主机</b></td>
@@ -104,7 +104,7 @@
 							
 								<tr>
 								<td  class="right color_red right_hg"><b>双线普及型主机</b></td><td>&nbsp;</td>
-								<td class="right_hg" align="right"><span class="right_r"><a href="?c=session&a=loginForm><img src="{{$STATIC}}images/r_fdh_01.jpg" border="0"/></a></span></td>
+								<td class="right_hg" align="right"><span class="right_r"><a href="?c=host&a=index"><img src="{{$STATIC}}images/r_fdh_01.jpg" border="0"/></a></span></td>
 								</tr>
 								<tr>
 								<td class="right_hg2" align="center"><b>双线主机</b></td>
@@ -155,7 +155,7 @@
 							<table id="table_r" cellpadding="0" cellspacing="4">
 								<tr>
 									<td  class="right color_red right_hg"><b>双线普及型主机</b></td><td>&nbsp;</td>
-									<td class="right_hg" align="right"><span class="right_r"><a href="?c=session&a=loginForm"><img src="{{$STATIC}}images/r_fdh_01.jpg" border="0"/></a></span></td>
+									<td class="right_hg" align="right"><span class="right_r"><a href="?c=host&a=index"><img src="{{$STATIC}}images/r_fdh_01.jpg" border="0"/></a></span></td>
 								</tr>
 								<tr>
 								  <td class="right_hg2" align="center"><b>双线主机</b></td>
