--- a/user/view/default/public/left.html
+++ b/user/view/default/public/left.html
@@ -15,7 +15,7 @@
 						 {{/for}}
 						</table>
 					  </td></tr>
-				  	 <tr><td><a href="#"><div class="left_bg_gong"></div></a></td></tr>
+				  	 <tr><td><a href="?c=public&a=pageListNews"><div class="left_bg_gong"></div></a></td></tr>
 				  </table>
 				</div>
 				
