--- a/user/view/default/public/pagelistnews.html
+++ b/user/view/default/public/pagelistnews.html
@@ -1,5 +1,4 @@
 <div class="right" align="center">
-<div class="wid_ri r_mar" ><img src="{{$STATIC}}style/yfk_cio.jpg" width="750" height="85"  border="0"/></div>
 <div class="wid_ri r_mar" align="right">
 	<div class="r_mar_top" align="right">
 		{{if $page>1}}
@@ -16,7 +15,7 @@
 		{{$page}}/{{$total_page}}&nbsp;
 		共计{{$count}}记录
 	</div>
-	<table id="table_ri" cellpadding="0" cellspacing="1">
+	<table id="table_news" cellpadding="0" cellspacing="1">
 		<tr>
 			<td>公告标题</td>
 			<td>发布时间</td>	
