--- a/user/view/default/msg.html
+++ b/user/view/default/msg.html
@@ -1,4 +1,5 @@
 <div class="right" align="center">
+	<div class="wid_ri r_mar" ><img src="{{$STATIC}}style/use_cio.jpg" width="750" height="85"  border="0"/></div>
 	<div class="wid_ri mar_top">
 		<table id="table_ri" cellpadding="0" cellspacing="1">
 		<tr>					
