--- a/admin/view/default/user/userslist.html
+++ b/admin/view/default/user/userslist.html
@@ -21,6 +21,7 @@
 				<table id="table" border="0" cellpadding="0" cellspacing="1">
 					<tr id="ttitle">
 						<td class="td_bgc right_2">用户名</td>
+						<td class="td_bgc right_2">代理身份</td>
 						<td class="td_bgc right_2">身份证</td>
 						<td class="td_bgc right_2">姓名</td>
 						<td class="td_bgc right_2">余额</td>
@@ -30,6 +31,7 @@
 						{{foreach from=$list item=row}}
 					<tr>
 						<td class="td_bgc right_2"><a href='?c=user&a=listUser&username={{$row.username}}'>{{$row.username}}</a></td>
+						<td class="td_bgc right_2">{{$row.agent_id}}</td>
 						<td class="td_bgc right_2">{{$row.id}}</td>
 						<td class="td_bgc right_2">{{$row.name}}</td>
 						<td class="td_bgc right_2">{{$row.money/100}}元</td>
