--- a/admin/view/default/vhostproduct/listVhost.html
+++ b/admin/view/default/vhostproduct/listVhost.html
@@ -35,7 +35,7 @@
 					<td class="td_bgc right_2">uid</td>
 					<td class="td_bgc right_2">所属用户</td>
 					<td class="td_bgc right_2">模板</td>
-					<td class="td_bgc right_2">所在服务器</td>
+					<td class="td_bgc right_2">服务器</td>
 					<td class="td_bgc right_2">路径</td>
 					<td class="td_bgc right_2">创建时间</td>
 					<td class="td_bgc right_2">过期时间</td>
@@ -46,6 +46,7 @@
 					<td class="td_bgc right_2">
 						[<a href='javascript:if(confirm("真的要删除空间吗,此操作将导致数据无法恢复,如果你只是想关闭空间，可以把该空间的状态改为暂停")){ window.location="?c=vhost&a=del&name={{$row.name}}";}'>删除</a>]
 						[<a href="?c=vhost&a=resync&name={{$row.name}}">重建</a>]
+					</td>
 					<td class="td_bgc right_2">{{$row.name}}</td>
 					<td class="td_bgc right_2">{{$row.uid}}</td>
 					<td class="td_bgc right_2"><a href='?c=user&a=listUser&username={{$row.username}}'>{{$row.username}}</a></td>
