--- a/admin/view/default/left.html
+++ b/admin/view/default/left.html
@@ -82,8 +82,8 @@ function SwitchMenu(obj,sty)
 		<ul class="submenu" id="sub6" >
 			<li><a href='?c=setting&a=index&sub=alipay' target='main'>网上支付设置</a></li>
 			<!--  <li><a href='?c=front&a=pageListIndex' target='main'>前台设置列表</a></li>-->
-			<li><a href='?c=agent&a=listagent' target='main'>代理设置</a></li>
-			<li><a href='?c=agentprice&a=pageListAgentprice' target='main'>代理设置2</a></li>
+			<li><a href='?c=agent&a=listagent' target='main'>代理级别设置</a></li>
+			<!--  <li><a href='?c=agentprice&a=pageListAgentprice' target='main'>代理设置2</a></li>-->
 	 	</ul>
 </div>
 </td></tr>
