--- a/user/view/default/user/index.html
+++ b/user/view/default/user/index.html
@@ -1,28 +1,41 @@
 <div class="right" align="center">
-<div class="wid_ri r_mar" ><img src="{{$STATIC}}style/use_cio.jpg" width="750" height="85"  border="0"/></div>
-<div class="wid_ri r_mar" align="right">
-<table id="table_ri" cellpadding="0" cellspacing="1">
-	 <tr><td colspan="2">帐户信息</td></tr>
-      <tr>
-        <td>用户名：</td>
-        <td class="tb_wid2">{{$user.username}}</td>
-      </tr>
-      <tr>
-        <td>姓名：</td>
-        <td>{{$user.name}}</td>
-      </tr>
-       <tr>
-        <td>登陆IP：</td>
-        <td>{{$login_ip}}</td>
-      </tr>
-	  <tr>
-        <td>电子邮件</td>
-        <td>{{$user.email}}</td>
-	  </tr>
-	  <tr>
-        <td>账户余额(元)</td>
- 		<td> {{$user.money/100}} &nbsp;[<a href="?c=money&a=addFrom" target="{{$target}}">在线充值</a>]</td>
-      </tr>
-    </table>
-  </div>
+	<div class="wid_ri r_mar" >
+		<img src="{{$STATIC}}style/use_cio.jpg" width="750" height="85"  border="0"/>
+	</div>
+	<div class="wid_ri r_mar" align="right">
+		<table id="table_ri" cellpadding="0" cellspacing="1">
+
+			<tr><td colspan="2">帐户信息</td></tr>
+		 
+	      	<tr>      
+	      	<td>用户名：</td>
+	        <td class="tb_wid2">{{$user.username}}</td>
+	      	</tr>
+	      
+	      	<tr>
+	        <td>姓名：</td>
+	        <td>{{$user.name}}</td>
+	      	</tr>
+	      
+	      	<tr>
+	        <td>登陆IP：</td>
+	        <td>{{$login_ip}}</td>
+	     	</tr>
+	      
+		  	<tr>
+	        <td>电子邮件</td>
+	        <td>{{$user.email}}</td>
+		  	</tr>
+		  
+		  	<tr>
+	        <td>您的代理级别</td>
+	        <td>{{if $user.agent_id>0}}{{$user.agent_name}}{{else}}无{{/if}}</td>
+		 	</tr>
+		  
+		  	<tr>
+	        <td>账户余额(元)</td>
+	 		<td> {{$user.money/100}} &nbsp;[<a href="?c=money&a=addFrom" target="{{$target}}">在线充值</a>]</td>
+	      	</tr>
+   		</table>
+ 	</div>
 </div>
