--- a/admin/view/default/vhostproduct/addProduct.html
+++ b/admin/view/default/vhostproduct/addProduct.html
@@ -111,7 +111,7 @@ function changeNode()
 	<tr>
 		<td class="td_bgc right_2">空间大小(M)：</td>
 		<td class="td_bgc right_2"><input name="web_quota" type="text"
-			id='tb_wid3' value="{{$vhostproduct.w-eb_quota}}" size="16"></td>
+			id='tb_wid3' value="{{$vhostproduct.web_quota}}" size="16"></td>
 	</tr>
 	<tr>
 		<td class="td_bgc right_2">数据库大小(M)：</td>
