--- a/admin/view/default/vhostproduct/addProduct.html
+++ b/admin/view/default/vhostproduct/addProduct.html
@@ -171,9 +171,9 @@ function changeNode()
 	<tr>
 		<td class="td_bgc right_2">多引擎切换:</td>
 		<td class="td_bgc right_2">
-			<input type='radio' name="cs" value="0" {{if $vhostprodcuct.cs==0}}checked{{/if}} size="16">不能切换
-			<input type='radio' name="cs" value="1" {{if $vhostprodcuct.cs==1}}checked{{/if}} size="16">随时切换
-			<input type='radio' name="cs" value="2" {{if !$vhostproduct || $vhostprodcuct.cs==2}}checked{{/if}} size="16">购买时切换
+			<input type='radio' name="cs" value="0" {{if $vhostproduct.cs==0}}checked{{/if}} size="16">不能切换
+			<input type='radio' name="cs" value="1" {{if $vhostproduct.cs==1}}checked{{/if}} size="16">随时切换
+			<input type='radio' name="cs" value="2" {{if !$vhostproduct || $vhostproduct.cs==2}}checked{{/if}} size="16">购买时切换
 		</td>
 	</tr>
 	<tr>
@@ -191,7 +191,7 @@ function changeNode()
 	<tr>
 		<td class="td_bgc right_2">管理变量:</td>
 		<td class="td_bgc right_2"><input name="envs" type="text" id='tb_wid3'
-			value="{{$vhostproduct.envs}}" size="32"></td>
+			value="{{$vhostproduct.envs}}" size="40"></td>
 	</tr>
 	<tr>
 		<td class="td_bgc right_2">其它选项</td>
