--- a/admin/view/default/left.html
+++ b/admin/view/default/left.html
@@ -65,6 +65,12 @@ function SwitchMenu(obj,sty)
 			<li><a href="?c=vhostproduct&a=showProduct" target='main'>产品列表</a></li>	
 			<li><a href="?c=vhostproduct&a=addProductForm" target='main'>增加产品</a></li>
 		</ul>
+		
+	<h1 id="m6" onClick="SwitchMenu('sub6','m6')" class="menu"><ol id="p6">非自动化产品</ol>	</h1>
+		<ul class="submenu" id="sub6" >
+			<li><a href="?c=mproduct&a=pageListMproduct" target='main'>产品列表</a></li>	
+			<li><a href="?c=mproduct&a=addMproductFrom" target='main'>增加产品</a></li>
+		</ul>
 	
 	<h1 id="m8" onClick="SwitchMenu('sub8','m8')" class="menu"><ol id="p8">财务管理</ol>	</h1>
 		<ul class="submenu" id="sub8" >
