--- a/admin/view/default/mproduct/pagelistmproduct.html
+++ b/admin/view/default/mproduct/pagelistmproduct.html
@@ -34,6 +34,7 @@
 					<tr>
 					<td class="right_2">
 						[<a href="javascript:if(confirm('确定?')){location='?c=mproduct&a=delMproduct&id={{$row.id}}';}" >删除</a>]
+						[<a href="?c=mproduct&a=addMproductFrom&id={{$row.id}}" >更改</a>]
 					</td>
 					<td class="right_2">{{$row.id}}</td>
 					<td class="right_2">{{$row.name}}</td>
@@ -48,6 +49,22 @@
 					{{/foreach}}
 					
 		  		</table>
+		</div>
+		
+		<div class="mar_top tb_wid5" align="right">
+			{{if $page>1}}
+			<a href='?c=mproduct&a=pageListMproduct&order={{$order}}&&page=0'>首页</a> 
+			<a href='?c=mproduct&a=pageListMproduct&order={{$order}}&page={{$page-1}}'>上一页</a> 
+			{{else}}
+			首页 上一页 
+			{{/if}}
+			{{if $page!=$total_page}} 
+			<a href='?c=mproduct&a=pageListMproduct&order={{$order}}&page={{$page+1}}'>下一页</a>
+			<a href='?c=mproduct&a=pageListMproduct&order={{$order}}&page={{$total_page}}'>尾页</a>
+			{{else}}下一页 尾页
+			{{/if}} 
+			{{$page}}/{{$total_page}}&nbsp;
+			共计{{$count}}记录
 		</div>
 	
 	</div>
