--- a/admin/view/default/question/pagelist.html
+++ b/admin/view/default/question/pagelist.html
@@ -5,13 +5,13 @@
 	<div align="center">
 		<div class="mar_top tb_wid5" align="right">
 			<table cellpadding="0" cellspacing="0" id="table_2">
-				<tr><td align="right">
-					<form action='?c=question&a=pageQuestion' method='post'>
+				<form action='?c=question&a=pageQuestion' method='post'>
+				<tr><td align="left">
 					 <select name='sortname' onChange="submit()">
 					 <option value='2' {{if $sortname==2}}selected{{/if}}>全部</option>
 					 <option value='1' {{if $sortname==1}}selected{{/if}}>未回复</option>
 					 </select>
-					  </form>
+					
 					  </td>
 					  <td align="right">
 					{{if $page>1}}
@@ -29,6 +29,7 @@
 					{{$page}}/{{$total_page}}&nbsp;
 					共计{{$count}}记录
 				</td></tr>
+				 </form>
 			</table>
 		</div>
 		<div class="block tb_wid5">
