--- a/admin/view/default/left.html
+++ b/admin/view/default/left.html
@@ -5,9 +5,10 @@
 <table cellpadding="0" cellspacing="0" class="lefttd">
 <tr><td>
 <script type="text/javascript">
+/*
 function SwitchMenu(obj,sty)
 {
-/*	if(document.getElementById)
+	if(document.getElementById)
 	{
 	var el = document.getElementById(obj);
 	var ml = document.getElementById(sty);
@@ -31,8 +32,9 @@ function SwitchMenu(obj,sty)
 			ml.className ="menu";
 		}
 	}
-	*/
+	
 }
+*/
 </script>
 <div id="masterdiv">
 <div align="center"><a href="http://www.kanglesoft.com" target="_blank"><img src='{{$STATIC}}/style/kanglevhms.gif' border="0"/></a></div>
@@ -66,8 +68,8 @@ function SwitchMenu(obj,sty)
 			<li><a href="?c=vhostproduct&a=addProductForm" target='main'>增加产品</a></li>
 		</ul>
 		
-	<h1 id="m6" onClick="SwitchMenu('sub6','m6')" class="menu"><ol id="p6">非自动化产品</ol>	</h1>
-		<ul class="submenu" id="sub6" >
+	<h1 id="m11" onClick="SwitchMenu('sub11','m11')" class="menu"><ol id="p11">非自动化产品</ol>	</h1>
+		<ul class="submenu" id="sub11" >
 			<li><a href="?c=mproduct&a=pageListMproduct" target='main'>产品列表</a></li>	
 			<li><a href="?c=mproduct&a=addMproductFrom" target='main'>增加产品</a></li>
 		</ul>
@@ -78,14 +80,14 @@ function SwitchMenu(obj,sty)
 			<li><a href='?c=money&a=pageMoneyout' target='main'>消费记录</a></li>	
 		</ul>
 			
-	<h1 id="m8" onClick="SwitchMenu('sub8','m8')" class="menu"><ol id="p8">信息管理</ol>	</h1>
-		<ul class="submenu" id="sub8" >
+	<h1 id="m9" onClick="SwitchMenu('sub9','m9')" class="menu"><ol id="p9">信息管理</ol>	</h1>
+		<ul class="submenu" id="sub9" >
 			<li><a href='?c=question&a=pageQuestion' target='main'>用户提问</a></li>
 			<li><a href='?c=news&a=pageNews' target='main'>公告管理</a></li>		
 		</ul>
 			
-	<h1 id="m6" onClick="SwitchMenu('sub7','m7')" class="menu"><ol id="p7">系统设置</ol>	</h1>
-		<ul class="submenu" id="sub6" >
+	<h1 id="m10" onClick="SwitchMenu('sub10','m10')" class="menu"><ol id="p10">系统设置</ol>	</h1>
+		<ul class="submenu" id="sub10" >
 			<li><a href='?c=setting&a=index&sub=alipay' target='main'>网上支付设置</a></li>
 			<!--  <li><a href='?c=front&a=pageListIndex' target='main'>前台设置列表</a></li>-->
 			<li><a href='?c=agent&a=listagent' target='main'>代理级别设置</a></li>
