--- a/user/view/default/public/contact.html
+++ b/user/view/default/public/contact.html
@@ -19,19 +19,19 @@
 						<p>
 							<br />
 							销售QQ :&nbsp;&nbsp;<a target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=qq号码&site=qq&menu=yes">
-							<img border="0" src="http://wpa.qq.com/pa?p=2:0:42" alt="请联系客服QQ" title="请联系客服QQ"></a>
+							<img border="0" src="http://wpa.qq.com/pa?p=2:qq号码:42" alt="请联系客服QQ" title="请联系客服QQ"></a>
 							&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 							
 							销售QQ :&nbsp;&nbsp;<a target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=qq号码&site=qq&menu=yes">
-							<img border="0" src="http://wpa.qq.com/pa?p=2:50:42" alt="请联系客服QQ" title="请联系客服QQ"></a>
+							<img border="0" src="http://wpa.qq.com/pa?p=2:qq号码:42" alt="请联系客服QQ" title="请联系客服QQ"></a>
 							<br />
 							
 							销售QQ :&nbsp;&nbsp;<a target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=qq号码&site=qq&menu=yes">
-							<img border="0" src="http://wpa.qq.com/pa?p=2:0:42" alt="请联系客服QQ" title="请联系客服QQ"></a>
+							<img border="0" src="http://wpa.qq.com/pa?p=2:qq号码:42" alt="请联系客服QQ" title="请联系客服QQ"></a>
 							&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 							
 							技术支持QQ :&nbsp;&nbsp;<a target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=qq号码&site=qq&menu=yes">
-							<img border="0" src="http://wpa.qq.com/pa?p=2:0:42" alt="请联系客服QQ" title="请联系客服QQ"></a><br />
+							<img border="0" src="http://wpa.qq.com/pa?p=2:qq号码:42" alt="请联系客服QQ" title="请联系客服QQ"></a><br />
 						</p>
 					</td></tr>
 			  </table>
