--- a/admin/view/default/mproduct/pagelistmproduct.html
+++ b/admin/view/default/mproduct/pagelistmproduct.html
@@ -3,6 +3,7 @@
 <div id="container">
 	<div align="center">
 		<div class="mar_top tb_wid5" align="right">
+		<a href="?c=mproduct&a=addMproductFrom" target='main'>增加产品</a>
 			{{if $page>1}}
 			<a href='?c=mproduct&a=pageListMproduct&order={{$order}}&&page=0'>首页</a> 
 			<a href='?c=mproduct&a=pageListMproduct&order={{$order}}&page={{$page-1}}'>上一页</a> 
