--- a/admin/view/default/mproductgroup/pagelistmproductgroup.html
+++ b/admin/view/default/mproductgroup/pagelistmproductgroup.html
@@ -3,6 +3,7 @@
 <div id="container">
 	<div align="center">
 		<div class="mar_top tb_wid5" align="right">
+		<a href="?c=mproductgroup&a=addMproductgroupfrom" target='main'>增加产品组</a>
 			{{if $page>1}}
 			<a href='?c=mproductgroup&a=pageListMproductgroup&order={{$order}}&&page=0'>首页</a> 
 			<a href='?c=mproductgroup&a=pageListMproductgroup&order={{$order}}&page={{$page-1}}'>上一页</a> 
@@ -39,6 +40,22 @@
 					</tr>
 					{{/foreach}}
 		  		</table>
+		</div>
+		
+		<div class="mar_top tb_wid5" align="right">
+			{{if $page>1}}
+			<a href='?c=mproductgroup&a=pageListMproductgroup&order={{$order}}&&page=0'>首页</a> 
+			<a href='?c=mproductgroup&a=pageListMproductgroup&order={{$order}}&page={{$page-1}}'>上一页</a> 
+			{{else}}
+			首页 上一页 
+			{{/if}}
+			{{if $page!=$total_page}} 
+			<a href='?c=mproductgroup&a=pageListMproductgroup&order={{$order}}&page={{$page+1}}'>下一页</a>
+			<a href='?c=mproductgroup&a=pageListMproductgroup&order={{$order}}&page={{$total_page}}'>尾页</a>
+			{{else}}下一页 尾页
+			{{/if}} 
+			{{$page}}/{{$total_page}}&nbsp;
+			共计{{$count}}记录
 		</div>
 		
 	</div>
