--- a/admin/view/default/left.html
+++ b/admin/view/default/left.html
@@ -72,6 +72,7 @@ function SwitchMenu(obj,sty)
 		<ul class="submenu" id="sub11" >
 			<li><a href="?c=mproduct&a=pageListMproduct" target='main'>产品列表</a></li>	
 			<li><a href="?c=mproductgroup&a=pageListMproductgroup" target='main'>产品组列表</a></li>
+			<li><a href="?c=mproductorder&a=pageListMproductorder" target='main'>订单列表</a></li>
 		</ul>
 	
 	<h1 id="m8" onClick="SwitchMenu('sub8','m8')" class="menu"><ol id="p8">财务管理</ol>	</h1>
