--- a/admin/view/default/left.html
+++ b/admin/view/default/left.html
@@ -71,7 +71,7 @@ function SwitchMenu(obj,sty)
 	<h1 id="m11" onClick="SwitchMenu('sub11','m11')" class="menu"><ol id="p11">非自动化产品</ol>	</h1>
 		<ul class="submenu" id="sub11" >
 			<li><a href="?c=mproduct&a=pageListMproduct" target='main'>产品列表</a></li>	
-			<li><a href="?c=mproductgroup&a=pageListMproductgroup" target='main'>产品组列表</a></li>
+			<li><a href="?c=mproductgroup&a=pageListMproductgroup" target='main'>业务列表</a></li>
 			<li><a href="?c=mproductorder&a=pageListMproductorder" target='main'>订单列表</a></li>
 		</ul>
 	
