--- a/admin/view/default/mproduct/addfrom.html
+++ b/admin/view/default/mproduct/addfrom.html
@@ -12,8 +12,14 @@
 				</tr>
 				
 				<tr>
-					<td class="td_bgc right_2">产品类型：</td>
-					<td class="td_bgc right_2"><input name="group_id" type="text" id='tb_wid3' value="{{$mproduct[0].group_id}}">
+					<td class="td_bgc right_2">业务类型：</td>
+					<td class="td_bgc right_2">
+						<select name='group_id'>
+						{{for $i=0;$i< count($mproductgroup);$i++}}
+							<option value="{{$mproductgroup[$i].id}}">{{$mproductgroup[$i].name}}</option>
+						{{/for}}
+						</select>
+						&nbsp;<a href="?c=mproductgroup&a=addMproductgroupFrom">增加业务</a>
 					</td>
 				</tr>
 				
@@ -30,8 +36,8 @@
 				</tr>
 				
 				<tr>
-					<td class="td_bgc right_2">产品说明(支持html):</td>
-					<td class="td_bgc right_2"><textarea name='describe' rows='6' cols='40'>{{$mproduct[0].describe}}</textarea></td>
+					<td class="td_bgc right_2">产品详情(支持html):</td>
+					<td class="td_bgc right_2"><textarea name='describe' rows='25' cols='70'>{{$mproduct[0].describe}}</textarea></td>
 				</tr>
 				
 				<tr>
