--- a/admin/view/default/mproductgroup/pagelistmproductgroup.html
+++ b/admin/view/default/mproductgroup/pagelistmproductgroup.html
@@ -3,7 +3,7 @@
 <div id="container">
 	<div align="center">
 		<div class="mar_top tb_wid5" align="right">
-		<a href="?c=mproductgroup&a=addMproductgroupFrom" target='main'>增加产品组</a>
+		<a href="?c=mproductgroup&a=addMproductgroupFrom" target='main'>增加业务</a>
 			{{if $page>1}}
 			<a href='?c=mproductgroup&a=pageListMproductgroup&order={{$order}}&&page=0'>首页</a> 
 			<a href='?c=mproductgroup&a=pageListMproductgroup&order={{$order}}&page={{$page-1}}'>上一页</a> 
