--- a/admin/view/default/mproduct/pagelistmproduct.html
+++ b/admin/view/default/mproduct/pagelistmproduct.html
@@ -24,7 +24,7 @@
 					<tr id="ttitle">
 					<td class="right_2">操作</td>	
 					<td class="right_2"><a href="?c=mproduct&a=pageListMproduct&order=id">产品ID</a></td>
-					<td class="right_2"><a href="?c=mproduct&a=pageListMproduct&order=name">>产品名称</a</td>
+					<td class="right_2"><a href="?c=mproduct&a=pageListMproduct&order=name">产品名称</a></td>
 					<td class="right_2"><a href="?c=mproduct&a=pageListMproduct&order=group_id">业务类型</a></td>
 					<td class="right_2"><a href="?c=mproduct&a=pageListMproduct&order=upid">产品组</td>
 					<td class="right_2"><a href="?c=mproduct&a=pageListMproduct&order=price">价格</td>	
