--- a/admin/view/default/mproductgroup/pagelistmproductgroup.html
+++ b/admin/view/default/mproductgroup/pagelistmproductgroup.html
@@ -23,9 +23,9 @@
 			
 					<tr id="ttitle">
 					<td class="right_2">操作</td>	
-					<td class="right_2">产品ID</td>
-					<td class="right_2">产品名称</td>
-					<td class="right_2">产品详情</td>
+					<td class="right_2">业务ID</td>
+					<td class="right_2">业务名称</td>
+					<td class="right_2">业务详情</td>
 					</tr>
 					{{foreach from=$list item=row}}
 					
