--- a/admin/view/default/vhostproduct/listVhost.html
+++ b/admin/view/default/vhostproduct/listVhost.html
@@ -43,6 +43,7 @@
 					<td class="td_bgc right_2">空间状态</td>					
 					</tr>
 					{{foreach from=$list item=row}}
+					<form action='?c=vhost&a=setStatus&name={{$row.name}}' method='post' name='status_{{$row.uid}}form'>
 				<tr>
 					<td class="td_bgc right_2">
 						[<a href='javascript:if(confirm("真的要删除空间吗,此操作将导致数据无法恢复,如果你只是想关闭空间，可以把该空间的状态改为暂停")){ window.location="?c=vhost&a=del&name={{$row.name}}";}'>删除</a>]
@@ -58,7 +59,7 @@
 					<td class="td_bgc right_2">{{$row.create_time}}</td>
 					<td class="td_bgc right_2">{{$row.expire_time}}</td>
 					<td class="td_bgc right_2">
-						<form action='?c=vhost&a=setStatus&name={{$row.name}}' method='post' name='status_{{$row.uid}}form'>
+						
 							<select name='status' onChange="javascript:status_{{$row.uid}}form.submit()">
 							{{for $i=0; $i<2; $i++}}
 							<option value='{{$i}}' {{if $i==$row.status}} selected {{/if}}>
@@ -66,8 +67,9 @@
 							</option>
 							{{/for}}
 							</select>
-							</form></td>
+							</td>
 					</tr>
+					</form>
 					{{/foreach}}
 		  </table>
 		</div>
