--- a/admin/view/default/mproductgroup/pagelistmproductgroup.html
+++ b/admin/view/default/mproductgroup/pagelistmproductgroup.html
@@ -23,8 +23,8 @@
 			
 					<tr id="ttitle">
 					<td class="right_2">操作</td>	
-					<td class="right_2">业务ID</td>
-					<td class="right_2">业务名称</td>
+					<td class="right_2"><a href='?c=mproductgroup&a=pageListMproductgroup&order=id'>业务ID</a></td>
+					<td class="right_2"><a href='?c=mproductgroup&a=pageListMproductgroup&order=name'>业务名称</a></td>
 					<td class="right_2">业务详情</td>
 					</tr>
 					{{foreach from=$list item=row}}
