--- a/user/view/default/mproductorder/addfrom.html
+++ b/user/view/default/mproductorder/addfrom.html
@@ -13,19 +13,18 @@
 				{{/if}}
 				
 				<tr>
-					<td class="td_bgc right_2">用户名：</td>
-					<td class="td_bgc right_2"><input name='username' type='text'  value="{{$mproductorder[0].username}}" size="71">
+					<td class="td_bgc right_2">产品选择：</td>
+					<td class="td_bgc right_2">
+						<select name='product_id'>
+							{{for $i=0;$i< count($mproduct);$i++}}
+							<option value="{{$mproduct[$i].id}}">{{$mproduct[$i].name}}</option>
+							{{/for}}
+						</select>
 					</td>
 				</tr>
 				
 				<tr>
-					<td class="td_bgc right_2">产品组名称：</td>
-					<td class="td_bgc right_2"><input name='product_id' type='text'  value="{{$mproductorder[0].product_id}}" size="71">
-					</td>
-				</tr>
-				
-				<tr>
-					<td class="td_bgc right_2">客户订单信息：</td>
+					<td class="td_bgc right_2">我的订单说明：</td>
 					<td class="td_bgc right_2"><input name='client_msg' type='text'  value="{{$mproductorder[0].client_msg}}" size="71">
 					</td>
 				</tr>
@@ -36,11 +35,6 @@
 					</td>
 				</tr>
 				
-				<tr>
-					<td class="td_bgc right_2">管理员备注：</td>
-					<td class="td_bgc right_2"><input name='admin_mem' type='text'  value="{{$mproductorder[0].admin_mem}}" size="71">
-					</td>
-				</tr>
 				
 				<tr>
 					<td class="td_bgc right_2">最终价格：</td>
