--- a/user/view/default/public/head.html
+++ b/user/view/default/public/head.html
@@ -108,16 +108,16 @@ td {font-family: Arial, Helvetica, sans-serif;font-size: 13px;}
 /*幻灯片*/
 .picshow { z-index:444; position:relative; background-color:#e4f2fa; width: 100%; height: 221px}
 .picshow_main {	position: relative; width: 687px; height: 281px}
-.picshow_main .imgbig {	filter: progid:dximagetransform.microsoft.wipe(gradientsize=1.0,wipestyle=4, motion=forward); width: 687px; height: 281px}
+.picshow_main .imgbig { width: 687px; height: 281px}
 .picshow_change {position: absolute; text-align: left; bottom: -5px; height: 35px; right: 0px; left: 560px;}
 .picshow_change img {width:20px; height: 15px}
-.picshow_change a {	border: 1px solid; display: block; float: left; margin-right: 5px;  -display: inline}
+.picshow_change a {	border: 1px solid; display: block; float: left; margin-right: 5px;  display: inline}
 .picshow_active {display:block}
 .picshow_unactive {display:none}
 a.axx {	border-color: #555}
 a.axx:hover {border-color: #000}
-a.axx img {	filter: alpha(opacity=40); opacity: 0.4; -moz-opacity: 0.4}
-a.axx:hover img {filter: alpha(opacity=100); opacity: 1.0; -moz-opacity: 1.0}
+a.axx img { opacity: 0.4; }
+a.axx:hover img { opacity: 1.0; }
 a.bxx {	border-color: #000}
 a.bxx:hover {border-color: #000}
 img{margin:0;padding:0;border:0;}
