fix uc login error.

--- a/user/view/default/user/index.html
+++ b/user/view/default/user/index.html
@@ -1,3 +1,6 @@
+{{if $ucsynclogin}}
+	{{$ucsynclogin}}
+{{/if}}
 <div class="right" align="center">
 	<div class="wid_ri r_mar" >
 		<img src="{{$STATIC}}style/use_cio.jpg" width="750" height="85"  border="0"/>
