--- a/admin/view/default/left.html
+++ b/admin/view/default/left.html
@@ -58,7 +58,7 @@ function SwitchMenu(obj,sty)
 			<li><a href="?c=user&a=listUser" target='main'>用户查询</a></li>
 			<li><a href="?c=user&a=pageUsers" target='main'>用户列表</a></li>
 			<li><a href="/user/frame.php?c=public&a=registerForm&at=1" target='main'>注册用户</a></li>
-			<li><a href="?c=vhost&a=pageVhostByExpire_time&day=1" target='main'>过期用户</a></li>		
+				
 		</ul>
 
 	<h1 id="m6" onClick="SwitchMenu('sub6','m6')" class="menu"><ol id="p6">虚拟主机</ol>	</h1>
@@ -66,15 +66,16 @@ function SwitchMenu(obj,sty)
 			<li><a href="?c=vhost&a=pageVhost" target='main'>虚拟主机列表</a></li>	
 			<li><a href="?c=vhostproduct&a=showProduct" target='main'>产品列表</a></li>	
 			<li><a href="?c=vhostproduct&a=addProductForm" target='main'>增加产品</a></li>
+			<li><a href="?c=vhost&a=pageVhostByExpire_time&day=1" target='main'>过期虚拟主机</a></li>	
 		</ul>
-	<!--  	
+	  	
 	<h1 id="m11" onClick="SwitchMenu('sub11','m11')" class="menu"><ol id="p11">非自动化产品</ol>	</h1>
 		<ul class="submenu" id="sub11" >
 			<li><a href="?c=mproduct&a=pageListMproduct" target='main'>产品列表</a></li>	
 			<li><a href="?c=mproductgroup&a=pageListMproductgroup" target='main'>业务列表</a></li>
 			<li><a href="?c=mproductorder&a=pageListMproductorder" target='main'>订单列表</a></li>
 		</ul>
-	-->
+	
 	<h1 id="m8" onClick="SwitchMenu('sub8','m8')" class="menu"><ol id="p8">财务管理</ol>	</h1>
 		<ul class="submenu" id="sub8" >
 			<li><a href='?c=money&a=pageMoneyin' target='main'>充值记录</a></li>
