--- a/admin/view/default/user/moneyedit.html
+++ b/admin/view/default/user/moneyedit.html
@@ -18,8 +18,7 @@
         <td class="td_bgc right_2"><input name='money' id="money" value="0"/></td>
       </tr>
 	   <tr>
-        <td colspan="2" bgcolor='#efefef' class='color01 center td_hg' align="center"><button type="submit">
-          修改</button></td>
+        <td colspan="2" bgcolor='#efefef' class='color01 center td_hg' align="center"><input type="submit" value="确认" /></td>
         </tr>
 	</form>
     </table>
