--- a/user/view/default/public/contact.html
+++ b/user/view/default/public/contact.html
@@ -16,23 +16,7 @@
 				<table cellspacing="10" width="100%">
 					<tr><td align="left"><img src="{{$STATIC}}/images/info_Title_pic_contact.jpg" /></td></tr>
 					<tr><td class="right_h" align="left" height="30">
-						<p>
-							<br />
-							销售QQ :&nbsp;&nbsp;<a target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=qq号码&site=qq&menu=yes">
-							<img border="0" src="http://wpa.qq.com/pa?p=2:qq号码:42" alt="请联系客服QQ" title="请联系客服QQ"></a>
-							&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-							
-							销售QQ :&nbsp;&nbsp;<a target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=qq号码&site=qq&menu=yes">
-							<img border="0" src="http://wpa.qq.com/pa?p=2:qq号码:42" alt="请联系客服QQ" title="请联系客服QQ"></a>
-							<br />
-							
-							销售QQ :&nbsp;&nbsp;<a target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=qq号码&site=qq&menu=yes">
-							<img border="0" src="http://wpa.qq.com/pa?p=2:qq号码:42" alt="请联系客服QQ" title="请联系客服QQ"></a>
-							&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-							
-							技术支持QQ :&nbsp;&nbsp;<a target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=qq号码&site=qq&menu=yes">
-							<img border="0" src="http://wpa.qq.com/pa?p=2:qq号码:42" alt="请联系客服QQ" title="请联系客服QQ"></a><br />
-						</p>
+						{{$setting.contact.value}}
 					</td></tr>
 			  </table>
 			  <!--客服代码开始-->
