--- a/user/view/default/public/foot.html
+++ b/user/view/default/public/foot.html
@@ -21,7 +21,7 @@
 					<td colspan="3" align="center">
 						<table><tr><td align="center">
 								  | 关于我们 | 广告服务| 付款方式 | 友情连接| 
-								  <div align="center">Powered by kangle-vhms and <a href='http://www.kanglesoft.com/'>kangle</a></div>
+								  <div align="center">Powered by <a href='http://www.kanglesoft.com/'>kangle vhms</a> {{$setting.stat_code.value}}</div>
 						</td></tr></table>
 					</td>
 				</tr>
@@ -29,7 +29,6 @@
 		 </div>
 	 </div>
 </div>
-<div class="height_t"><table id="table_r"><tr><td height="5"></td></tr></table></div>
 </body>
 </html>
 
