--- a/user/view/default/session/login.html
+++ b/user/view/default/session/login.html
@@ -29,7 +29,7 @@ function ValidateForm()
 					<td colspan="2" height="10" align="center"></td>
 				  </tr>
 				  <tr>
-					<td colspan="2" class="td_hg" align="center">&nbsp;密码:&nbsp;&nbsp;<input type="password" name="passwd"/></td>
+					<td colspan="2" class="td_hg" align="center">密&nbsp;&nbsp;码:&nbsp<input type="password" name="passwd"/></td>
 				  </tr>
 				  <tr>
 					<td colspan="2" class="td_hg" align="center"><input type="submit" value="登 录" /></td>
