--- a/user/view/default/public/register_n.html
+++ b/user/view/default/public/register_n.html
@@ -42,7 +42,7 @@
 					  </tr>
 					 <tr>
 						 <td class="td_bgc td_hg" colspan="2" align="center" height="30"><input name="agree" type="checkbox" value="1">
-						  我已阅读并同意<a href="pact.php" target="_blank">注册协议</a></td>
+						  我已阅读并同意<a href='?c=public&a=registerPact' target="_blank">注册协议</a></td>
 					  </tr>
 					<tr>
 						<td class="td_bgc" colspan="2" align="center" height="35">
