--- a/admin/view/default/setting/setup.html
+++ b/admin/view/default/setting/setup.html
@@ -12,6 +12,10 @@
         <td width="99" bgcolor='#efefef' class='color01 right'>首页logo设置地址</td>
         <td width="168" class="td_bgc right_2"><input name='logo' id="money" size="50"  value='{{$setting.logo.value}}'/></td> 
       </tr>
+	  <tr>
+        <td width="99" bgcolor='#efefef' class='color01 right'>首页顶部banner设置</td>
+        <td width="168" class="td_bgc right_2"><input name='banner' id="money" size="50"  value='{{$setting.banner.value}}'/></td> 
+      </tr>
       <tr>
         <td class='color01 right' bgcolor='#efefef'>联系方式</td>
         <td class="td_bgc right_2">
