--- a/admin/view/default/setting/setup.html
+++ b/admin/view/default/setting/setup.html
@@ -9,22 +9,26 @@
         <td class="td_bgc right_2"><input name='web_name' id="money" size="50" value='{{$setting.web_name.value}}'/></td>
       </tr>
       <tr>
-        <td width="99" bgcolor='#efefef' class='color01 right'>首页logo设置地址</td>
+        <td width="110" bgcolor='#efefef' class='color01 right'>首页logo图片地址</td>
         <td width="168" class="td_bgc right_2"><input name='logo' id="money" size="50"  value='{{$setting.logo.value}}'/></td> 
       </tr>
 	  <tr>
-        <td width="99" bgcolor='#efefef' class='color01 right'>首页顶部banner设置</td>
-        <td width="168" class="td_bgc right_2"><input name='banner' id="money" size="50"  value='{{$setting.banner.value}}'/></td> 
+        <td bgcolor='#efefef' class='color01 right'>顶部banner图片地址</td>
+        <td class="td_bgc right_2"><input name='banner' id="money" size="50"  value='{{$setting.banner.value}}'/></td> 
+      </tr>
+	  <tr>
+        <td bgcolor='#efefef' class='color01 right'>顶部banner链接设置</td>
+        <td class="td_bgc right_2"><input name='links' id="money" size="50"  value='{{$setting.links.value}}'/></td> 
       </tr>
       <tr>
-        <td class='color01 right' bgcolor='#efefef'>联系方式</td>
+        <td class='color01 right' bgcolor='#efefef'>联系方式（支持html）</td>
         <td class="td_bgc right_2">
         <textarea name='contact'  rows='5' cols='50'>{{$setting.contact.value}}</textarea>
         </td>
       </tr>
 
       <tr>
-        <td class='color01 right' bgcolor='#efefef'>统计代码</td>
+        <td class='color01 right' bgcolor='#efefef'>统计代码（支持html）</td>
         <td class="td_bgc right_2">
         <textarea name='stat_code'  rows='5' cols='50'>{{$setting.stat_code.value}}</textarea></td>
       </tr>
