--- a/user/view/default/public/head.html
+++ b/user/view/default/public/head.html
@@ -185,8 +185,10 @@ img{margin:0;padding:0;border:0;}
 		 </tr>
 	  </form>
 	  <tr>
-	  	<td colspan="2" align="right"><a href="http://zh.kanglesoft.com">
-		<img src='{{if $setting.banner.value}}{{$setting.banner.value}}{{else}}{{$STATIC}}images/ad.gif{{/if}}' border="0" width="770" height="70"></a></td>
+	  	<td colspan="2" align="right">
+			<a href='{{if $setting.links.value}}{{$setting.links.value}}{{else}}http://zh.kanglesoft.com{{/if}}' target="_blank">
+			<img src='{{if $setting.banner.value}}{{$setting.banner.value}}{{else}}{{$STATIC}}images/ad.gif{{/if}}' border="0" width="770" height="70"></a>
+		</td>
 	  </tr>
 	  <tr>
 	  <tr>
