node add nickname.

--- a/admin/view/default/nodes/addnode.html
+++ b/admin/view/default/nodes/addnode.html
@@ -15,6 +15,10 @@
         />
        <font color=red>*必填.服务器名字.不可以为中文</font></td>
         </tr>
+       <tr>
+        <td class="td_bgc right_2">备注：</td>
+        <td class="td_bgc right_2"><input name="nickname" type="text"  size='32' value="{{$node.nickname}}">
+        </tr>
       <tr>
         <td class="td_bgc right_2">easypanel主机IP：</td>
         <td class="td_bgc right_2"><input name="host" type="text" id='tb_wid3' value="{{$node.host}}">
