--- a/user/view/default/user/left.html
+++ b/user/view/default/user/left.html
@@ -36,7 +36,7 @@
 			<div class="u_left_box">
 			<ul class="submenu" id="sub6" >
 				<li><a href="?c=vhostproduct&a=pageVhostByuser" target="{{$target}}">我的虚拟主机</a></li>
-			  <!--  <li><a href="?c=user&a=pageListMyMproductorder" target="{{$target}}">非自动化产品</a></li>-->
+			   	<li><a href="?c=user&a=pageListMyMproductorder" target="{{$target}}">非自动化产品</a></li>
 				<li><a href="?c=question&a=pageByuser" target="{{$target}}">我的提问</a></li>
 			 </ul>
 			 </div>
