--- a/user/view/default/mproductorder/addfrom.html
+++ b/user/view/default/mproductorder/addfrom.html
@@ -28,7 +28,7 @@
 				<tr>
 					<td class="td_bgc right_2">我的补充说明：</td>
 					<td class="td_bgc right_2">
-						<textarea name='client_msg' cols='40' rows='5'></textarea>
+						<textarea name='client_msg' cols='40' rows='5'>{{$mproductorder[0].client_msg}}</textarea>
 					</td>
 				</tr>
 				
