首页产品分类

--- a/user/view/default/public/head.html
+++ b/user/view/default/public/head.html
@@ -30,6 +30,8 @@ td {font-family: Arial, Helvetica, sans-serif;font-size: 13px;}
 .mar_h{ padding-bottom:10px;}
 .Left_main {FLOAT: left; WIDTH: 263px;}
 .Left_main_vh {FLOAT: left; WIDTH: 213px;}
+.Left_main_vh2 {FLOAT: left; WIDTH: 225px;}
+.Left_main_vh3 {FLOAT: left; WIDTH: 5px;}
 .right_main {FLOAT: left; margin-left:5px;}
 .bgcolor_left{background-color:#E0E0E0;}
 .bgcolor_left2{background-color:#ffffff;}
@@ -83,6 +85,7 @@ td {font-family: Arial, Helvetica, sans-serif;font-size: 13px;}
 .right_top{padding-top:0px;padding-right:0px;}
 .topimg3 {text-align:left;background:url({{$STATIC}}images/dmain.jpg) 0px no-repeat;line-height:82px;height:223px;width:689px;}
 .host_bg {text-align:left;background:url({{$STATIC}}images/r_zj.jpg) 0px no-repeat;line-height:82px;height:281px;width:689px;}
+.host_bg_226 {text-align:left;background:url({{$STATIC}}images/r_zj_227.jpg) 0px no-repeat;line-height:82px;height:255px;width:226px;}
 .host_bg_vh {text-align:left;background:url({{$STATIC}}images/r_zj2.jpg) 0px no-repeat;line-height:82px;height:281px;width:750px;}
 .left_host_bg {text-align:left;background:url({{$STATIC}}images/leftbg.jpg) 0px no-repeat;line-height:82px;height:281px;width:689px;}
 .color_red{color:#FF0000;}
