--- a/user/view/default/public/index.html
+++ b/user/view/default/public/index.html
@@ -70,7 +70,7 @@
 			  <tr>
 				<td class="right_h">价格：<span class="color_red"><b>{{$products[$i].price/100}}</b></span>元/年</td>
 			  </tr>
-			  <tr><td class="right_r" colspan="2">
+			  <tr><td class="right_r right_hg3" colspan="2">
 				<a href="?c=product&a=sellForm&product=vhost_{{$products[$i].id}}">
 				<img src="{{$STATIC}}images/r_btn01.jpg" border="0"/></a>&nbsp;&nbsp;
 				<a href="?c=host&a=showProductFrom&product_id={{$products[$i].id}}"><img src="{{$STATIC}}images/r_btn02.jpg" border="0"/></a></td>
